[project]
name = "personalfinanceapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Caio Morelli",email = "caiomorelli.it@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13 <4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
